; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/extr_cacheinfo.c_init_amd_cacheinfo.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/extr_cacheinfo.c_init_amd_cacheinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpuinfo_x86 = type { i32 }

@X86_FEATURE_TOPOEXT = common dso_local global i32 0, align 4
@num_cache_leaves = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_amd_cacheinfo(%struct.cpuinfo_x86* %0) #0 {
  %2 = alloca %struct.cpuinfo_x86*, align 8
  store %struct.cpuinfo_x86* %0, %struct.cpuinfo_x86** %2, align 8
  %3 = load i32, i32* @X86_FEATURE_TOPOEXT, align 4
  %4 = call i64 @boot_cpu_has(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load %struct.cpuinfo_x86*, %struct.cpuinfo_x86** %2, align 8
  %8 = call i32 @find_num_cache_leaves(%struct.cpuinfo_x86* %7)
  store i32 %8, i32* @num_cache_leaves, align 4
  br label %22

9:                                                ; preds = %1
  %10 = load %struct.cpuinfo_x86*, %struct.cpuinfo_x86** %2, align 8
  %11 = getelementptr inbounds %struct.cpuinfo_x86, %struct.cpuinfo_x86* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp uge i32 %12, -2147483642
  br i1 %13, label %14, label %21

14:                                               ; preds = %9
  %15 = call i32 @cpuid_edx(i32 -2147483642)
  %16 = and i32 %15, 61440
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %14
  store i32 4, i32* @num_cache_leaves, align 4
  br label %20

19:                                               ; preds = %14
  store i32 3, i32* @num_cache_leaves, align 4
  br label %20

20:                                               ; preds = %19, %18
  br label %21

21:                                               ; preds = %20, %9
  br label %22

22:                                               ; preds = %21, %6
  ret void
}

declare dso_local i64 @boot_cpu_has(i32) #1

declare dso_local i32 @find_num_cache_leaves(%struct.cpuinfo_x86*) #1

declare dso_local i32 @cpuid_edx(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
